buck: refactoring of jvm package
Summary:
^
Applied suggestions from IntelliJ.

Reviewed By: IanChilds

fbshipit-source-id: bca904ebf852d2deafc04e3a435838f54a9a13d1